--- a/quejapp/app/src/main/res/values/strings.xml
+++ b/quejapp/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="text1">Este es un Texto de ejemplo</string>
     <string name="text2">Este es un Texto de ejemplo para cada tab</string>
     <string name="button1">Click para ver los tabs</string>
+    <string name="usuario">Usuario</string>
+    <string name="password">Contraseña</string>
+    <string name="login">Login</string>
+    <string name="no_tienes_cuenta_registrate">No Tienes Cuenta ? Registrate</string>
 </resources>
