--- a/quejapp/app/src/main/res/values/strings.xml
+++ b/quejapp/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="password">Contraseña</string>
     <string name="login">Login</string>
     <string name="no_tienes_cuenta_registrate">No Tienes Cuenta ? Registrate</string>
+    <string name="direccion_de_correo">Direccion de Correo</string>
+    <string name="registrarse">Registrarse</string>
+    <string name="ya_tienes_cuenta_logeate">Ya tienes cuenta ? Logeate</string>
 </resources>
